# rust_tui

./: Cargo.toml  todos.json
src/: main.rs
src/state/: app.rs  browser.rs  event.rs  mod.rs  player.rs  todo.rs
src/ui/: layout.rs  mod.rs
src/ui/sections/: fif.txt  mod.rs  music_browser.rs  player.rs  todo_list.rs
src/utils/: art.rs  mod.rs  storage.rs
