[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
log = "0.4.22"
simplelog = "0.12.2"
glib = "0.20.7"
id3 = "1.16.0"
image = "0.25.5"
ratatui-image = "3.0.0"
rodio = "0.20.1"
taglib = "1.0.0"
tempfile = "3.14.0"
termion = "4.0.3"
symphonia = "0.5.4"
